Fix navbar styling on narrow viewport

--- a/style.css
+++ b/style.css
@@ -438,17 +438,73 @@ em {
 
     header nav .nav-wrapper {
         display: flex;
+        justify-content: center;
+        align-items: stretch;
         position: absolute;
         top: 3.75rem;
         background: rgba(0, 0, 0, 0.85);
         width: 100%;
         padding: 2rem 0;
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
+
+        z-index: 999;
     }
 
-    .hero {
+    header nav a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .search {
+        height: calc(100% + 2rem);
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        /* Three above to center vertically */
+        padding: 20px;
+        /* and this to give adequate space */
+        transition: background-color 250ms ease-in;
+    }
+
+    .search__input {
+        border: 1px solid grey;
+        background-color: black;
+        color: #f05429;
+        padding: 1rem 0.5rem;
+        margin-right: 1rem;
+        flex-grow: 1;
+        outline: 0;
+        z-index: 999;
+        cursor: pointer;
+        font-size: 1rem;
+    }
+
+    .search__submit {
+        margin-left: auto;
+        background: 0;
+        border: 0;
+        cursor: pointer;
+        /*     border-radius: 100vh; */
+        transition: all 200ms ease-out;
+        /*     width: calc(var(--size) - 10px);
+        height: calc(var(--size) - 10px); */
+        color: white;
+        font-size: 1rem;
+        height: 100%;
+        padding: 1rem;
+    }
+
+    .search__submit:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .search__submit:active {
+        color: rgb(240, 84, 41);
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    header nav .hero {
         display: block;
     }
 
@@ -492,89 +548,82 @@ em {
     header nav .nav-toggle:checked~.nav-wrapper {
         display: flex;
     }
-}
 
-:root {
-    --clr-primary: #ee6352;
-    --clr-body: #333;
-    --clr-bg: #ddd;
-}
+    .search {
+        --size: 60px;
+        display: flex;
+        align-items: stretch;
+        overflow: hidden;
+        position: relative;
+        /*     width: var(--size);
+        height: var(--size); */
+        /* transition: width 450ms cubic-bezier(0.18, 0.89, 0.32, 1.28); */
+        transition: all 250ms ease-in-out;
+    }
 
-.search {
-    --size: 60px;
-    display: flex;
-    align-items: stretch;
-    overflow: hidden;
-    position: relative;
-    /*     width: var(--size);
-    height: var(--size); */
-    /* transition: width 450ms cubic-bezier(0.18, 0.89, 0.32, 1.28); */
-    transition: all 250ms ease-in-out;
-}
+    .search:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 
-.search:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-}
+    .search__input {
+        border: 0;
+        padding: 0.25em 1em;
+        flex-grow: 1;
+        outline: 0;
+        z-index: 2;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        /*     background: transparent; */
+        opacity: 0;
+        cursor: pointer;
+        font-size: 1rem;
+    }
 
-.search__input {
-    border: 0;
-    padding: 0.25em 1em;
-    flex-grow: 1;
-    outline: 0;
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    /*     background: transparent; */
-    opacity: 0;
-    cursor: pointer;
-    font-size: 1rem;
+    .search__submit {
+        margin-left: auto;
+        background: 0;
+        border: 0;
+        cursor: pointer;
+        /*     border-radius: 100vh; */
+        transition: all 200ms ease-out;
+        /*     width: calc(var(--size) - 10px);
+        height: calc(var(--size) - 10px); */
+        color: white;
+        font-size: 1rem;
+        height: 100%;
+        padding: 0 1rem;
+    }
 
-}
+    .search:focus-within {
+        width: 30%;
+        /* If class wasn't in container, a relative value (e.g. 30%) would work better */
+        min-width: 300px;
+        border: 2px solid rgb(30, 30, 30);
+        border-radius: 13px;
+        background-color: white;
+        color: darkslategray;
+    }
 
-.search__submit {
-    margin-left: auto;
-    background: 0;
-    border: 0;
-    cursor: pointer;
-    /*     border-radius: 100vh; */
-    transition: all 200ms ease-out;
-    /*     width: calc(var(--size) - 10px);
-    height: calc(var(--size) - 10px); */
-    color: white;
-    font-size: 1rem;
-    height: 100%;
-    padding: 0 1rem;
-}
+    .search:focus-within .search__input {
+        opacity: 1;
+        z-index: initial;
+        cursor: initial;
+        width: calc(100% - 50px);
+        /* Don't know why... :( */
+    }
 
-.search:focus-within {
-    width: 30%;
-    /* If class wasn't in container, a relative value (e.g. 30%) would work better */
-    min-width: 300px;
-    border: 2px solid rgb(30, 30, 30);
-    border-radius: 13px;
-    background-color: white;
-    color: darkslategray;
-}
+    .search:focus-within .search__submit {
+        color: black;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    }
 
-.search:focus-within .search__input {
-    opacity: 1;
-    z-index: initial;
-    cursor: initial;
-    width: calc(100% - 50px);
-    /* Don't know why... :( */
-}
-
-.search:focus-within .search__submit {
-    color: black;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-}
-
-.search:focus-within .search__submit:hover,
-.search:focus-within .search__submit:focus {
-    outline: 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.65);
-    color: #f05429;
+    .search:focus-within .search__submit:hover,
+    .search:focus-within .search__submit:focus {
+        outline: 0;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.65);
+        color: #f05429;
+    }
 }
